# Dashboard

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt  vercel.json
backend/api/: check_env.py  main.py  settings.py
backend/api/models/: __init__.py  classification.py  client.py  database.py  task.py  transcript.py
backend/api/routes/: __init__.py  classify.py  clients.py  dashboard.py  ingest.py  metrics.py  transcripts.py
backend/api/schemas/: __init__.py  classification.py  client.py  common.py  dashboard.py  metrics.py  pipeline.py  transcript.py
backend/api/services/: __init__.py  classify.py  clients.py  dashboard.py  genai_client.py  llm_classifier.py  metrics.py  pipeline.py  transcripts.py
backend/tests/: __init__.py  test_clients.py  test_health.py  test_metrics.py
backend/vambe_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: client.ts  clients.ts  dashboard.ts  ingest.ts
frontend/src/components/: CompetitorsWinRate.tsx  KpiCards.tsx  ObjectionsChart.tsx  UrgencyBudgetHeatmap.tsx
frontend/src/components/UI/: VambeLogo.tsx  VambeLogoSmall.tsx
frontend/src/layout/: DashboardLayout.tsx  DeployMenu.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/pages/: Clients.tsx  Metrics.tsx
frontend/src/store/: filterStore.ts
(+15 files in other folders)
