[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vambe-backend"
version = "0.1.0"
description = "FastAPI backend for the Vambe monorepo"
readme = "README.md"
authors = [{ name = "Vambe", email = "dev@vambe.local" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "google-genai>=1.50.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[project.scripts]
api-dev = "api.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "tests"]
